refachor: temporary remove domain from cookie settings

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://[username]:[password]@localhost:5432/[db]?schema=public"
 JWT_SECRET=1a2b3c4d5f
+DOMAIN=localhost
 ORIGIN='http://localhost:3000'
